# shellwego-backend-monorepo

./: +  .dockerignore  .gitignore  Cargo.toml  Makefile  docker-compose.yml  lib.guide.md  package-lock.json  package.json  readme.md  relay.config.json  repomix.config.json
.idx/: dev.nix
crates/shellwego-agent/: Cargo.toml  README.md
crates/shellwego-agent/src/: daemon.rs  discovery.rs  lib.rs  main.rs  metrics.rs  migration.rs  reconciler.rs  snapshot.rs
crates/shellwego-agent/src/vmm/: config.rs  driver.rs  mod.rs
crates/shellwego-agent/src/wasm/: mod.rs  runtime.rs
crates/shellwego-agent/tests/docs/: 1.md
crates/shellwego-agent/tests/e2e/: mod.rs  provisioning_test.rs
crates/shellwego-agent/tests/integration/: mod.rs  network_test.rs  snapshot_test.rs  storage_test.rs  vmm_test.rs
crates/shellwego-agent/tests/unit/: mod.rs  reconciler_test.rs
crates/shellwego-billing/: Cargo.toml  README.md
crates/shellwego-billing/src/: invoices.rs  lib.rs  metering.rs
crates/shellwego-cli/: Cargo.toml  README.md
crates/shellwego-cli/src/: client.rs  completion.rs  config.rs  main.rs  shell.rs
crates/shellwego-cli/src/commands/: apps.rs  auth.rs  build.rs  compose.rs  config.rs  databases.rs  domains.rs  exec.rs  logs.rs  mod.rs  nodes.rs  secrets.rs  ssh.rs  status.rs  top.rs  tunnel.rs  update.rs  volumes.rs
crates/shellwego-control-plane/: Cargo.toml  README.md
crates/shellwego-control-plane/src/: config.rs  main.rs  state.rs
crates/shellwego-control-plane/src/api/: docs.rs  mod.rs
crates/shellwego-control-plane/src/api/handlers/: apps.rs  auth.rs  databases.rs  discovery.rs  domains.rs  events.rs  health.rs  marketplace.rs  metrics.rs  mod.rs  nodes.rs  secrets.rs  volumes.rs  webhooks.rs
crates/shellwego-control-plane/src/db/: mod.rs
crates/shellwego-control-plane/src/events/: bus.rs
crates/shellwego-control-plane/src/federation/: gossip.rs  mod.rs
crates/shellwego-control-plane/src/git/: builder.rs  mod.rs  webhook.rs
crates/shellwego-control-plane/src/kms/: mod.rs  providers.rs
crates/shellwego-control-plane/src/operators/: mod.rs  mysql.rs  postgres.rs  redis.rs
crates/shellwego-control-plane/src/orm/: mod.rs
crates/shellwego-control-plane/src/orm/entities/: app.rs  audit_log.rs  backup.rs  database.rs  deployment.rs  domain.rs  mod.rs  node.rs  organization.rs  secret.rs  user.rs  volume.rs  webhook.rs
crates/shellwego-control-plane/src/orm/migration/: m20240101_000001_create_organizations_table.rs  m20240101_000002_create_users_table.rs  m20240101_000003_create_apps_table.rs  m20240101_000004_create_nodes_table.rs  m20240101_000005_create_databases_table.rs  m20240101_000006_create_domains_table.rs  m20240101_000007_create_secrets_table.rs  m20240101_000008_create_volumes_table.rs  m20240101_000009_create_deployments_table.rs  m20240101_000010_create_backups_table.rs  m20240101_000011_create_webhooks_table.rs  m20240101_000012_create_audit_logs_table.rs  m20240101_000013_create_app_instances_table.rs  m20240101_000014_create_webhook_deliveries_table.rs  m20240101_000015_create_app_volumes_join_table.rs  m20240101_000016_create_app_domains_join_table.rs  m20240101_000017_create_app_databases_join_table.rs  mod.rs
crates/shellwego-control-plane/src/orm/repository/: app_repository.rs  audit_log_repository.rs  backup_repository.rs  database_repository.rs  deployment_repository.rs  domain_repository.rs  mod.rs  node_repository.rs  organization_repository.rs  secret_repository.rs  user_repository.rs  volume_repository.rs  webhook_repository.rs
crates/shellwego-control-plane/src/services/: audit.rs  backup.rs  certificate.rs  deployment.rs  discovery.rs  health_check.rs  marketplace.rs  mod.rs  rate_limiter.rs  scheduler.rs  webhook_delivery.rs
crates/shellwego-control-plane/tests/docs/: 1.md
crates/shellwego-core/: Cargo.toml  README.md
crates/shellwego-core/src/: error.rs  lib.rs  prelude.rs
crates/shellwego-core/src/entities/: app.rs  app_instance.rs  audit.rs  backup.rs  build.rs  database.rs  domain.rs  metrics.rs  mod.rs  node.rs  organization.rs  secret.rs  volume.rs  webhook.rs
crates/shellwego-edge/: Cargo.toml  README.md
crates/shellwego-edge/src/: lib.rs  proxy.rs  router.rs  tls.rs
crates/shellwego-edge/tests/docs/: 1.md
crates/shellwego-firecracker/: Cargo.toml
crates/shellwego-firecracker/src/: lib.rs  models.rs
crates/shellwego-firecracker/src/vmm/client/: mod.rs
crates/shellwego-network/: Cargo.toml  README.md
crates/shellwego-network/src/: bridge.rs  discovery.rs  ipam.rs  lib.rs  tap.rs  vxlan.rs  wireguard.rs
crates/shellwego-network/src/cni/: mod.rs
crates/shellwego-network/src/ebpf/: firewall.rs  mod.rs  qos.rs
crates/shellwego-network/src/quinn/: client.rs  common.rs  mod.rs  server.rs
crates/shellwego-observability/: Cargo.toml  README.md
crates/shellwego-observability/src/: lib.rs  logs.rs  metrics.rs  tracing.rs
crates/shellwego-registry/: Cargo.toml  README.md
crates/shellwego-registry/src/: cache.rs  lib.rs  pull.rs
crates/shellwego-storage/: Cargo.toml  README.md
crates/shellwego-storage/src/: encryption.rs  lib.rs  oci.rs  s3.rs
crates/shellwego-storage/src/zfs/: cli.rs  mod.rs
docs/: EntitySchizophrenia.md  flow.todo.md  lib.md  plan.md  plan.patches.md  plan2.patches.md  relay.md  repomix.md  rest.endpoints.md
docs/changes/: Codebase "Bit Rot" in Scaffolding.md  Discovery Duplication.md  Messaging Ambiguity (NATS vs. Quinn).md  Missing "Sovereign" Safety.md  Stack Drift.md  The "Top" TUI Bloat.md  VMM Driver implementation.md  agent_production_ready_progress.md
scripts/: setup_agent_tests.sh  split_patches.py  test_split.py
