[package]
name = "shellwego-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Worker node agent: manages Firecracker microVMs and reports to control plane"

[[bin]]
name = "shellwego-agent"
path = "src/main.rs"

[dependencies]
shellwego-core = { path = "../shellwego-core" }
shellwego-storage = { path = "../shellwego-storage" }
shellwego-network = { path = "../shellwego-network", features = ["quinn"] }

# Async runtime
tokio = { workspace = true, features = ["full", "process"] }
tokio-util = { workspace = true }

# HTTP client (talks to control plane)
hyper = { workspace = true }
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { version = "0.10", features = ["serde"] }
postcard = "1.0"

# System info
sysinfo = "0.30"
nix = { version = "0.27", features = ["process", "signal", "user"] }
gethostname = "0.4"

# Firecracker / VMM
# Using local firecracker SDK placeholder
firecracker = { path = "../shellwego-firecracker" }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
dashmap = "6.1"
async-trait = "0.1"
tempfile = "3.8"
zeroize = { version = "1.8", features = ["derive"] }
bytes = "1.9"
futures = "0.3"
clap = { workspace = true }

[features]
default = []
metal = []
