[package]
name = "shellwego-control-plane"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Control plane: REST API, scheduler, and cluster state management"

[[bin]]
name = "shellwego-control-plane"
path = "src/main.rs"

[dependencies]
shellwego-core = { path = "../shellwego-core", features = ["openapi"] }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace", "compression", "request-id"] }
hyper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"] }
sea-orm-migration = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Message queue
async-nats = { workspace = true }

# Documentation/OpenAPI
aide = "0.13"
schemars = "0.8"

# HTTP client for static file proxy
reqwest = { version = "0.11", features = ["json"] }

# Config & logging
config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Auth
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"