[package]
name = "shellwego-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared kernel: entities, errors, and types for ShellWeGo"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true, optional = true }
schemars = { version = "0.8", optional = true }
validator = { workspace = true }

[features]
default = ["openapi"]
openapi = ["dep:utoipa", "dep:schemars"]