[package]
name = "shellwego-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared kernel: entities, errors, and types for ShellWeGo"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.7", features = ["derive"] }
serde_with = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true, optional = true }
schemars = { version = "0.8", optional = true }
validator = { workspace = true }
sea-orm = { version = "1.0", features = ["macros", "with-json"], optional = true }
sea-query = { version = "0.31", optional = true }

[features]
default = ["openapi", "orm"]
openapi = ["dep:utoipa", "dep:schemars"]
orm = ["dep:sea-orm", "dep:sea-query"]