[package]
name = "shellwego-firecracker"
version = "0.4.0"
edition = "2021"
authors = ["ShellWeGo Contributors"]
license = "AGPL-3.0-or-later"
description = "Firecracker MicroVM API SDK (placeholder/impl)"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hyper = { workspace = true, features = ["full"] }
bytes = "1.5"
http-body-util = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
