[package]
name = "shellwego-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Network drivers: CNI plugins, bridge setup, eBPF filtering"

[dependencies]
# Core
tokio = { workspace = true, features = ["process", "rt", "net"] }
serde = { workspace = true }
serde_json = { workspace = true }

# DNS for service discovery (hickory-dns - trust-dns successor)
hickory-dns = { version = "0.24", optional = true }
hickory-resolver = { version = "0.24", optional = true }

[features]
default = ["quinn"]
ebpf = ["aya", "aya-log", "nix"]
quinn = ["dep:quinn", "dep:rustls", "dep:webpki", "dep:rcgen"]

# Netlink for network interface management
rtnetlink = "0.14"
netlink-packet-route = "0.14"

# eBPF - Moving from "future" to "foundation"
aya = { version = "0.12", features = ["async-tokio"], optional = true }
aya-log = "0.2"

# IP address management
ipnetwork = "0.20"
rand = "0.8"

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

# System interface
nix = { version = "0.27", features = ["net"] }
libc = "0.2"
