[package]
name = "shellwego-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Storage drivers: ZFS dataset management, snapshots, and clones"

[dependencies]
# Core
tokio = { workspace = true, features = ["process", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async process management
tokio-process = "0.2"  # TODO: Check if merged into tokio main

# Tracing
tracing = { workspace = true }

# Utilities
regex = "1.10"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"